--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -43,10 +43,10 @@
 }
 .main input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
-  border-radius: 4px;
+  border: 1px solid #a5a5a5;
+  border-radius: 20px;
   margin-bottom: 24px;
-  outline-color: #10a37f;
+  outline-color: #5e5e5e;
 }
 .main ::placeholder {
   color: #8e8ea0;
